@@ -1,6 +1,5 @@
 package health.ere.ps.service.dgc;
 
-import com.google.common.base.Strings;
 import health.ere.ps.event.RequestBearerTokenFromIdpEvent;
 import health.ere.ps.model.dgc.CertificateRequest;
 import health.ere.ps.model.dgc.PersonName;
@@ -23,7 +22,6 @@ import javax.ws.rs.core.Response;
 import java.io.InputStream;
 import java.time.LocalDate;
 import java.util.Collections;
-import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.logging.Logger;
@@ -59,42 +57,37 @@ public class DigitalGreenCertificateService {
      * @param fn  (family) name
      * @param gn  given name
      * @param dob date of birth
-     * @param id1 administering instance id 1
-     * @param tg1 illness 1
-     * @param vp1 vaccine 1
-     * @param mp1 product 1
-     * @param ma1 manufacturer 1
-     * @param dn1 dose number 1
-     * @param sd1 total dose count 1
-     * @param dt1 vaccination date 1
-     * @param id2 administering instance id 2; the second vaccination will be added to the certificate iff this value is non-empty
-     * @param tg2 illness 2
-     * @param vp2 vaccine 2
-     * @param mp2 product 2
-     * @param ma2 manufacturer 2
-     * @param dn2 dose number 2
-     * @param sd2 total dose count 2
-     * @param dt2 vaccination date 2
+     * @param id administering instance id
+     * @param tg illness
+     * @param vp vaccine
+     * @param mp product
+     * @param ma manufacturer
+     * @param dn dose number
+     * @param sd total dose count
+     * @param dt vaccination date
      * @return bytes of certificate pdf
      */
     public byte[] issueVaccinationCertificatePdf(String fn, String gn, LocalDate dob,
-                                                 String id1, String tg1, String vp1, String mp1, String ma1, Integer dn1,
-                                                 Integer sd1, String dt1,
-                                                 String id2, String tg2, String vp2, String mp2, String ma2, Integer dn2,
-                                                 Integer sd2, String dt2) {
+                                                 String id, String tg, String vp, String mp, String ma, Integer dn,
+                                                 Integer sd, String dt) {
 
         VaccinationCertificateRequest vaccinationCertificateRequest = new VaccinationCertificateRequest();
 
         vaccinationCertificateRequest.setDob(dob);
         vaccinationCertificateRequest.setNam(new PersonName(fn, gn));
 
-        V v1 = createV(id1, tg1, vp1, mp1, ma1, dn1, sd1, dt1);
+        V v = new V();
 
-        if (Strings.isNullOrEmpty(id2)) {
-            vaccinationCertificateRequest.v = Collections.singletonList(v1);
-        } else {
-            vaccinationCertificateRequest.v = List.of(v1, createV(id2, tg2, vp2, mp2, ma2, dn2, sd2, dt2));
-        }
+        v.id = id;
+        v.tg = tg;
+        v.vp = vp;
+        v.mp = mp;
+        v.ma = ma;
+        v.dn = dn;
+        v.sd = sd;
+        v.dt = dt;
+
+        vaccinationCertificateRequest.v = Collections.singletonList(v);
 
         return issuePdf(vaccinationCertificateRequest);
     }
@@ -168,20 +161,5 @@ public class DigitalGreenCertificateService {
         requestBearerTokenFromIdp.fire(event);
 
         return Optional.ofNullable(event.getBearerToken()).orElseThrow(IllegalArgumentException::new);
-    }
-
-    private static V createV(String id, String tg, String vp, String mp, String ma, Integer dn, Integer sd, String dt) {
-        V v = new V();
-
-        v.id = id;
-        v.tg = tg;
-        v.vp = vp;
-        v.mp = mp;
-        v.ma = ma;
-        v.dn = dn;
-        v.sd = sd;
-        v.dt = dt;
-
-        return v;
     }
 }
